Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.0.0
-
None
-
59c90e00c1e8b18d120f5b5c15b331b1ee427ace d0c537ca759aa7facfdd0efedac5f5385d16ddb9 ca4be197efc29c6f77f83978aa5a7e6cbe533b79 72e19c4886066cd71cb075af0efde8f701fcfb24
Description
Step to reproduce:
1) Save some file from QtCreator - the file isn't marked as modified.
2) Modify the file outside of QtCreator
3) When back to QtCreator answer not to reload changed file.
4) The file inside QtCreator still isn't marked as modified, however it has most probably a different contents in this context. So it should be marked with asterisk.
I think we should mark all changed files outside of QtCreator with asterisk just before we show the message box. When we decide to reload them asterisks should gone. If we decide not to reload them, the asterisks should stay.
Attachments
For Gerrit Dashboard: QTCREATORBUG-17048 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
174047,11 | Add a resetClean() method to the undo stack | 5.8 | qt/qtbase | Status: MERGED | +2 | 0 |
174074,3 | Mark file modified externally as modified after the prompt | 4.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
174473,7 | Fix marking files modified externally as modified | 4.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |